# FindCar

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/cli/: CMakeLists.txt  main.cpp
cpp/gui/: CMakeLists.txt  main.cpp  qtui.cpp  qtui.h  qtui.ui
cpp/lib/: CMakeLists.txt  OcvTextDetector.cpp  OcvTextDetector.hpp  TessTextReader.cpp  TessTextReader.hpp
python/: img_utils.py  try_ctypes.py  try_pytess.py  try_tessocr.py
tesseract/include/tesseract/: version.h
tesseract/tessdata/: carplate.patterns
